Convert acronym tags to abbr

--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -73,7 +73,7 @@
 		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-			&gt;&nbsp;Contact <acronym title="Esquimalt Graving Dock">EGD</acronym></p>
+			&gt;&nbsp;Contact <abbr title="Esquimalt Graving Dock">EGD</abbr></p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
@@ -89,7 +89,7 @@
 			<div class="center">
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Contact <acronym title="Esquimalt Graving Dock">EGD</acronym>
+					Contact <abbr title="Esquimalt Graving Dock">EGD</abbr>
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p><strong> Before you contact us, please read our <a href="#con-pri">Privacy
@@ -170,7 +170,7 @@
 				<p>Operations Manager<br />
 					Esquimalt Graving Dock<br />
 					825&nbsp;Admirals Road<br />
-					Esquimalt, <acronym title="British Columbia">BC</acronym><br />
+					Esquimalt, <abbr title="British Columbia">BC</abbr><br />
 					V9A&nbsp;2P1<br />
 					Canada</p>
 				<h3>Telephone us:</h3>
@@ -201,7 +201,7 @@
 						of federal Members of Parliament.</p>
 				<p>The Internet is a public forum and electronic information can be intercepted.
 					This is not a secure Web site. Please do not disclose unnecessary confidential
-					information about yourself or your accounts with <acronym title='Public Works and Government Services Canada'>PWGSC</acronym>. </p>
+					information about yourself or your accounts with <abbr title='Public Works and Government Services Canada'>PWGSC</abbr>. </p>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
