--- a/cn-cu-fra.html
+++ b/cn-cu-fra.html
@@ -69,7 +69,7 @@
 		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt;&nbsp;Contactez <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></p>
+			&gt;&nbsp;Contactez <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr></p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
@@ -85,7 +85,7 @@
 			<div class="center">
 				<h1 id="cont">
 					<!-- DEBUT DU TITRE DU CONTENU | CONTENT TITLE BEGINS -->
-					Contactez <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym>
+					Contactez <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr>
 					<!-- FIN DU TITRE DU CONTENU | CONTENT TITLE ENDS -->
 					</h1>
 				<p><strong>Avant de communiquer avec nous, veuillez prendre connaissance
@@ -192,7 +192,7 @@
 				<p>Internet est un forum public et l'information &eacute;lectronique peut &ecirc;tre
 					intercept&eacute;e. Le pr&eacute;sent site n'est pas un site Web prot&eacute;g&eacute;.
 					Ne divulguez pas d'information confidentielle non n&eacute;cessaire qui
-					vous concerne ou qui concerne vos comptes avec <acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>.</p>
+					vous concerne ou qui concerne vos comptes avec <abbr title='Travaux publics et Services gouvernementaux Canada'>TPSGC</abbr>.</p>
 			</div>
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
 
