--- a/conduite-conduct-eng.html
+++ b/conduite-conduct-eng.html
@@ -122,7 +122,7 @@
             Engaging in behavior contrary to its use as a unique public facility does
             not allow for a healthy and competitive marketplace on the West Coast;</li>
           <li>(b) The Government of Canada commits to its environmental responsibilities
-            under <acronym title="International Standards Organization">ISO</acronym>&nbsp;14001 certification;</li>
+            under <abbr title="International Standards Organization">ISO</abbr>&nbsp;14001 certification;</li>
           <li>(c) As a designated port, the Government of Canada will adhere to the
             commitments required for international security as determined by the International
             Ship and Port Security (ISPS) legislation;</li>
@@ -251,7 +251,7 @@
 					Top of Page</a> </div>
 				<h2><strong>ARTICLE&nbsp;5</strong></h2>
 				<h3><strong>COMPLIANCE </strong></h3>
-				<p><strong>5.1&nbsp;Determination of compliance</strong>. <acronym title="Esquimalt Graving Dock">EGD</acronym> Management will
+				<p><strong>5.1&nbsp;Determination of compliance</strong>. <abbr title="Esquimalt Graving Dock">EGD</abbr> Management will
 					monitor compliance to this Code. Where there is a written disclosure made
 					to the Manager, Esquimalt Graving Dock or the Regional Director General
 					which indicates a failure to comply with this Code, it will be determined:</p>
