--- a/conduite-conduct-fra.html
+++ b/conduite-conduct-fra.html
@@ -126,7 +126,7 @@
             d&rsquo;un march&eacute; sain et ouvert &agrave; la concurrence sur la c&ocirc;te
             Ouest. </li>
           <li> (b) Le gouvernement du Canada s&rsquo;engage &agrave; respecter ses responsabilit&eacute;s
-            environnementales en vertu de la certification <acronym title="Organisation internationale de normalisation">ISO</acronym>&nbsp;14001. </li>
+            environnementales en vertu de la certification <abbr title="Organisation internationale de normalisation">ISO</abbr>&nbsp;14001. </li>
           <li> (c) Puisqu&rsquo;il s&rsquo;agit d&rsquo;un port d&eacute;sign&eacute;,
             le gouvernement du Canada respecte les engagements requis en mati&egrave;re
             de s&eacute;curit&eacute; internationale &eacute;tablis par la l&eacute;gislation
