--- a/dimensions2-eng.html
+++ b/dimensions2-eng.html
@@ -92,7 +92,7 @@
 		<div class="smallFont" style="font-weight:bold; width:730px; margin-bottom:40px;">
 			<p>The image above shows the plan and longitudinal views of the drydock.</p>
 			<p>The Esquimalt Graving Dock's dimensions measure 357.5&nbsp;metres by 38.4&nbsp;metres &ndash; or about 1,200&nbsp;feet long by 135&nbsp;feet wide. The facility is provided with two floating caisson gates, which can be positioned at any of four alternative locations to partition the drydock into two dock sections.  The top of the dry dock floor slab is -10.52&nbsp;m and the granite coping (top of the dock retaining walls) is at 4.42&nbsp;m.</p>
-			<p>Please <a href="cn-cu-eng.html">contact <acronym title="Esquimalt Graving Dock">EGD</acronym></a> for more details on the dock dimensions.</p>
+			<p>Please <a href="cn-cu-eng.html">contact <abbr title="Esquimalt Graving Dock">EGD</abbr></a> for more details on the dock dimensions.</p>
 			
 		</div>
 			
