--- a/entreprises-firms-eng.html
+++ b/entreprises-firms-eng.html
@@ -102,7 +102,7 @@
         </h1>
 
 				<p>These links are provided solely for the convenience of Public Works and Government
-					of Canada (PWGSC) website users. <acronym title="Public Works and Government Services Canada">PWGSC</acronym> is not responsible for the information
+					of Canada (PWGSC) website users. <abbr title="Public Works and Government Services Canada">PWGSC</abbr> is not responsible for the information
 					found on them. Some of these links are to organizations or other entities that
 					are not subject to the <em>Official Languages Act</em>. Users should be aware that some
 					information from other sources may be available in only one official language.</p>
