--- a/entreprises-firms-fra.html
+++ b/entreprises-firms-fra.html
@@ -99,7 +99,7 @@
         </h1>
 
 				<p>Ces liens sont destin&eacute;s aux usagers du site web de Travaux publics
-					et Services gouvernementaux Canada (TPSGC). <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> n'est pas responsable
+					et Services gouvernementaux Canada (TPSGC). <abbr title="Travaux publics et Services gouvernementaux Canada">TPSGC</abbr> n'est pas responsable
 					de l'information qu'ils contiennent. Les liens qui donnent acc&egrave;s &agrave; des
 					organismes ou entit&eacute;s qui ne sont pas assujettis &agrave; la <em>Loi
 					sur les langues officielles</em> peuvent &ecirc;tre pr&eacute;sent&eacute;s
