--- a/env/barrage-boom-fra.html
+++ b/env/barrage-boom-fra.html
@@ -93,7 +93,7 @@
 				<p>Par  Dan del Villano </p>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:300px;">
 					<img src="../images/lowering-the-boom-1.jpg" alt="" width="300" height="199" /><br />
-					Des employ&eacute;s et des entrepreneurs de <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> se familiarisent avec le nettoyage des d&eacute;versements en milieu marin, sujet tr&egrave;s important, &agrave; la cale s&egrave;che d'Esquimalt. Ce barrage flottant gonflable, de couleur orange, sert &agrave; contenir les d&eacute;versements de p&eacute;trole. </div>
+					Des employ&eacute;s et des entrepreneurs de <abbr title="Travaux publics et Services gouvernementaux Canada">TPSGC</abbr> se familiarisent avec le nettoyage des d&eacute;versements en milieu marin, sujet tr&egrave;s important, &agrave; la cale s&egrave;che d'Esquimalt. Ce barrage flottant gonflable, de couleur orange, sert &agrave; contenir les d&eacute;versements de p&eacute;trole. </div>
 
 				<p>Au d&eacute;but du printemps, &agrave; la cale s&egrave;che d'Esquimalt (plus grande cale s&egrave;che au Canada), une formation sur l'intervention en cas de d&eacute;versement de p&eacute;trole a &eacute;t&eacute; donn&eacute;e aux employ&eacute;s et aux entrepreneurs de Travaux publics et Services gouvernementaux Canada (TPSGC) travaillant sur place.</p>
 					
@@ -104,9 +104,9 @@
 				<div class="smallFont" style="font-weight:bold; float:left; padding-right:10px; width:300px;"><img src="../images/lowering-the-boom-2.jpg" alt="" width="300" height="200" /><br />
 					Dans le respect du principe de prudence, on d&eacute;ploie toujours un barrage flottant &agrave; la cale s&egrave;che d'Esquimalt. </div>
 
-				<p>La formation sur l'intervention en cas de d&eacute;versement de p&eacute;trole constitue &eacute;galement une autre &eacute;tape &agrave; franchir en vue de l'obtention prochaine, par la cale s&egrave;che, de la certification <acronym title="Organisation internationale de normalisation">ISO</acronym>&nbsp;14001. Celle-ci est une norme de gestion de l'environnement reconnue &agrave; l'&eacute;chelle internationale, et aucune grande installation de construction et de r&eacute;paration de navires au monde n'est ainsi certifi&eacute;e.</p>
+				<p>La formation sur l'intervention en cas de d&eacute;versement de p&eacute;trole constitue &eacute;galement une autre &eacute;tape &agrave; franchir en vue de l'obtention prochaine, par la cale s&egrave;che, de la certification <abbr title="Organisation internationale de normalisation">ISO</abbr>&nbsp;14001. Celle-ci est une norme de gestion de l'environnement reconnue &agrave; l'&eacute;chelle internationale, et aucune grande installation de construction et de r&eacute;paration de navires au monde n'est ainsi certifi&eacute;e.</p>
 
-				<p>Bill Pleming, agent r&eacute;gional de s&eacute;curit&eacute; de <acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>, a fait le voyage depuis Vancouver pour participer &agrave; la formation. Ce qui l'a impressionn&eacute; plus que tout, indique-t-il, est la collaboration qu'il a constat&eacute;e entre <acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>, le minist&egrave;re de la D&eacute;fense nationale et le secteur priv&eacute;. &laquo;&nbsp;Ils ont vraiment &eacute;tabli des rapports proactifs&nbsp;&raquo;, a-t-il affirm&eacute;. </p>
+				<p>Bill Pleming, agent r&eacute;gional de s&eacute;curit&eacute; de <abbr title='Travaux publics et Services gouvernementaux Canada'>TPSGC</abbr>, a fait le voyage depuis Vancouver pour participer &agrave; la formation. Ce qui l'a impressionn&eacute; plus que tout, indique-t-il, est la collaboration qu'il a constat&eacute;e entre <abbr title='Travaux publics et Services gouvernementaux Canada'>TPSGC</abbr>, le minist&egrave;re de la D&eacute;fense nationale et le secteur priv&eacute;. &laquo;&nbsp;Ils ont vraiment &eacute;tabli des rapports proactifs&nbsp;&raquo;, a-t-il affirm&eacute;. </p>
 
 				<p><em>Source&nbsp;: Ensemble, ao&ucirc;t&nbsp;2000, volume&nbsp;8, no&nbsp;6</em></p>
 			</div>
