--- a/env/ecocivisme-environment-eng.html
+++ b/env/ecocivisme-environment-eng.html
@@ -90,7 +90,7 @@
 
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					<acronym title="Esquimalt Graving Dock">EGD</acronym>: A Good Environmental Citizen
+					<abbr title="Esquimalt Graving Dock">EGD</abbr>: A Good Environmental Citizen
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>by Roy John<br />
@@ -101,40 +101,40 @@
 					Bonnie MacKenzie, Regional Director General, Public Works
 						and Governmetn Services Canada (centre) presents certificates
 						of appreciation to several members of the Esquimalt Graving
-						Dock <acronym title="Environmental Management System">EMS</acronym> steering committee: (Left to Right) Jim Sandwith,
+						Dock <abbr title="Environmental Management System">EMS</abbr> steering committee: (Left to Right) Jim Sandwith,
 						Peninsula Waste Water Services Ltd; Malcolm Barker, Victoria
 						Shipyards; Gordon Safarik, Esquimalt Dry Dock Company;
 						and Peter Brennan of Jenkins Marine.
 				</div>
 				<p>The Canadian General Standards Board has recently registered the Esquimalt
 					Graving Dock, the largest fixed-foundation civilian dry dock
-					on the West Coast of North America, to <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001. Located
+					on the West Coast of North America, to <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001. Located
 					in a suburb of Victoria, British Columbia, the dock is owned
 					and operated by Public Works and Government Services Canada
 					(PWGSC), but all the shipbuilding and repairs are done by
 					private companies.</p>
-				<p><acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 registration has come about because in&nbsp;1999 the dock's management
+				<p><abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001 registration has come about because in&nbsp;1999 the dock's management
 					and tenants agreed that an organized approach was necessary
 					to address environmental issues associated with industry
 					activities.</p>
 				<p>Recognizing that the success of the project required the participation
-					and support of a number of independent organizations, <acronym title="Public Works and Government Services Canada">PWGSC</acronym>
+					and support of a number of independent organizations, <abbr title="Public Works and Government Services Canada">PWGSC</abbr>
 					began by forming an environmental committee of all the affected
-					parties. The <acronym title="Public Works and Government Services Canada">PWGSC</acronym> staff persuaded the ship-repair firms
-					that creating an <acronym title="Environmental Management System">EMS</acronym> was right for both moral and business
+					parties. The <abbr title="Public Works and Government Services Canada">PWGSC</abbr> staff persuaded the ship-repair firms
+					that creating an <abbr title="Environmental Management System">EMS</abbr> was right for both moral and business
 					reasons. Making this change in an industry centuries old
 					and very conservative was a major accomplishment in itself.
-					Once this had been achieved the <acronym title="Public Works and Government Services Canada">PWGSC</acronym> environmental staff
-					worked on designing a coherent <acronym title="Environmental Management System">EMS</acronym>.</p>
-				<p>The proposed environmental management system took into account <acronym title="Public Works and Government Services Canada">PWGSC</acronym>'s
+					Once this had been achieved the <abbr title="Public Works and Government Services Canada">PWGSC</abbr> environmental staff
+					worked on designing a coherent <abbr title="Environmental Management System">EMS</abbr>.</p>
+				<p>The proposed environmental management system took into account <abbr title="Public Works and Government Services Canada">PWGSC</abbr>'s
 					unique situation of being the owner and operator of the
 					dock, but not the ship-repair service provider. It gave operating
-					protocols for all of the <acronym title="Public Works and Government Services Canada">PWGSC</acronym> functions &ndash; providing water,
+					protocols for all of the <abbr title="Public Works and Government Services Canada">PWGSC</abbr> functions &ndash; providing water,
 					steam, power, air as well as the physical facilities. In
 					addition it included mechanisms to ensure that the dock's
 					tenants repsected Esquimalt's environmental needs.</p>
 				<p>To increase awareness and goodwill, the pre-audit training sessions provided
-					to <acronym title="Public Works and Government Services Canada">PWGSC</acronym> employees were made available to all of the dock's
+					to <abbr title="Public Works and Government Services Canada">PWGSC</abbr> employees were made available to all of the dock's
 					tenants. This not only provided technical information to
 					the people working on site, but also created a strong team
 					spirit.</p>
@@ -146,24 +146,24 @@
 					the difficulty in defining the scope of the entity to be
 					registered. It took an effort to produce a scope that encompassed
 					the broad and somewhat diffuse structure at Esquimalt Graving
-					Dock while keeping within the limits of <acronym title="Public Works and Government Services Canada">PWGSC</acronym>'s management
+					Dock while keeping within the limits of <abbr title="Public Works and Government Services Canada">PWGSC</abbr>'s management
 					control.</p>
 				<p>Typcially an audit report identifies deficiencies. Only rarely does it
 					include congratulations, but this was the case with the Esquimalt
 					Graving Dock. The dock's management and tenants were applauded
 					for their outstanding team effort, in producing a truly shared
 					environmental management system.</p>
-				<p>Achieving <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 regsitration demonstrates that <acronym title="Public Works and Government Services Canada">PWGSC</acronym> is a good corporate
+				<p>Achieving <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001 regsitration demonstrates that <abbr title="Public Works and Government Services Canada">PWGSC</abbr> is a good corporate
 					environmental citizen. The management discipline imposed
 					by the standard will allow the staff to retain control over
 					the environmental issues despite the consistently changing
 					nature of the marine repair-business. The Esquimalt Graving
 					Dock was one of the first federal organizations to meet the
-					requirements of <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001, and one of only three large shipyards
+					requirements of <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001, and one of only three large shipyards
 					in the world to achieve this designation.</p>
 				<p>The Canadian General Standards Board extends its congratuations to the
 					Esquimalt Graving Dock's management and tenants on achieving
-					<acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 registration.</p>
+					<abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001 registration.</p>
 				
 				<p><em>Source: Calibre, Spring&nbsp;2002, Volume&nbsp;7, No.&nbsp;1</em></p>
 			</div>
