--- a/env/politique-policy-eng.html
+++ b/env/politique-policy-eng.html
@@ -101,7 +101,7 @@
         <p>
           The Esquimalt Graving Dock and its users realize that environmental
           management is an integral part of attaining that
-          goal. Through the implementation of an <acronym title="International Standards Organization">ISO</acronym>&nbsp;14001
+          goal. Through the implementation of an <abbr title="International Standards Organization">ISO</abbr>&nbsp;14001
           Environmental Management System, we are committed
           to managing the actual and potential environmental
           impacts of our operations.
