--- a/env/politique-policy-fra.html
+++ b/env/politique-policy-fra.html
@@ -96,7 +96,7 @@
         <p>La Cale s&egrave;che d'Esquimalt et ses usagers sont conscients que l'atteinte
           de cet objectif passe obligatoirement par la gestion
           de l'environnement. La mise en &oelig;uvrue d'un syst&egrave;me de gestion de
-          l'environnement certifi&eacute; <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001&nbsp;traduit notre engagement &agrave; g&eacute;rer
+          l'environnement certifi&eacute; <abbr title="Organisation internationale de normailisation">ISO</abbr>&nbsp;14001&nbsp;traduit notre engagement &agrave; g&eacute;rer
           les r&eacute;percussions que nos activit&eacute;s ont ou pourraient
           avoir sur l'environnement. </p>
         <img src="../images/dock-cale-3.jpg" alt="" />
