--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -108,7 +108,7 @@
 				business at the facility is conducted in an environmentally responsible manner,
 				the Esquimalt Graving Dock has implemented
 				an Environmental Management System (EMS)
-				certified to the internationally recognized <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 <acronym title="Environmental Management System">EMS</acronym> standard.
+				certified to the internationally recognized <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001 <abbr title="Environmental Management System">EMS</abbr> standard.
       </p>
 
       <div class="topPage">
@@ -118,10 +118,10 @@
         </a>
       </div>
 
-      <h2 id="iso"><acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001</h2>
+      <h2 id="iso"><abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001</h2>
 
       <p>
-        The <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001
+        The <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001
         certification is an internationally recognized standard for the development
         and implementation of an Environmental Management System.
         Qualifying for this recognition in&nbsp;2001, the Esquimalt Graving Dock has
@@ -149,12 +149,12 @@
 
       <p>
         The Esquimalt Graving Dock's commitment to environmental protection is
-        outlined in the <acronym title="Esquimalt Graving Dock">
-        EGD</acronym> <a href="politique-policy-eng.html">Environmental Policy</a>.
+        outlined in the <abbr title="Esquimalt Graving Dock">
+        EGD</abbr> <a href="politique-policy-eng.html">Environmental Policy</a>.
       </p>
 
       <p>
-        By signing the <acronym title="Esquimalt Graving Dock">EGD</acronym> <a href="politique-policy-eng.html">Environmental
+        By signing the <abbr title="Esquimalt Graving Dock">EGD</abbr> <a href="politique-policy-eng.html">Environmental
         Policy</a>, upper management has made a commitment towards the prevention
         of pollution, the protection of the natural environment and the compliance
         with applicable environmental regulations and standards.
@@ -173,15 +173,15 @@
         All of those conducting business at the Esquimalt Graving Dock are expected
         to operate in an environmentally responsible manner. This includes compliance
         with applicable environmental regulations and standards. In support
-        of this, <acronym title="Esquimalt Graving Dock">EGD</acronym> has developed a 
+        of this, <abbr title="Esquimalt Graving Dock">EGD</abbr> has developed a 
         comprehensive set of Environmental Best Management Practices (EBMPs).
       </p>
 
       <p>
-        <acronym title="Environmental Best Management Practices">EBMPs</acronym> are
+        <abbr title="Environmental Best Management Practices">EBMPs</abbr> are
         ways of reducing and preventing the discharge of pollutants into the environment
         through good housekeeping, maintenance, materials management, communications,
-        work practices and technology. Most <acronym title="Environmental Best Management Practices">EBMPs</acronym> are
+        work practices and technology. Most <abbr title="Environmental Best Management Practices">EBMPs</abbr> are
         a form of source control for pollution prevention. Their implementation
         can minimize the production of waste and pollution from activities such
         as paint removal and surface preparation, painting, engine maintenance
@@ -189,7 +189,7 @@
       </p>
 
       <p>
-        To obtain a copy of the <acronym title="Esquimalt Graving Dock">EGD</acronym> 
+        To obtain a copy of the <abbr title="Esquimalt Graving Dock">EGD</abbr> 
         Environmental Best Management Practices, please contact the 
         <a href="#coordonnateur-coordinator">Environmental Coordinator</a>.
       </p>
@@ -205,11 +205,11 @@
 
 			<ul>
         <li><a href="simple-eng.html">Keeping It Simple: Bubble Curtain Saves Fish, Seals, and Valuable Time</a>&nbsp;(2003)</li>
-        <li><a href="ecocivisme-environment-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym>: A Good Environmental Citizen</a>&nbsp;(2002)</li>
+        <li><a href="ecocivisme-environment-eng.html"><abbr title="Esquimalt Graving Dock">EGD</abbr>: A Good Environmental Citizen</a>&nbsp;(2002)</li>
         <li><a href="barrage-boom-eng.html">Lowering the Boom on Oil Spills</a>&nbsp;(2000)</li>
         <li>
-          <a href="voie-way-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym>: Leading the Way with
-          <acronym title="International Standards Organization">ISO</acronym>&nbsp;14001</a>&nbsp;(2000)
+          <a href="voie-way-eng.html"><abbr title="Esquimalt Graving Dock">EGD</abbr>: Leading the Way with
+          <abbr title="International Standards Organization">ISO</abbr>&nbsp;14001</a>&nbsp;(2000)
         </li>
       </ul>
 
