--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -103,8 +103,8 @@
 				Afin de garantir que les activit&eacute;s men&eacute;es dans ses installations
 				s'effectuent dans le respect de l'environnement, la cale s&egrave;che d'Esquimalt a
 				mis en &#339;uvre un syst&egrave;me de gestion de l'environnement (SGE)
-				qui a &eacute;t&eacute; certifi&eacute; conforme &agrave; la norme internationale <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001
-        concerant les <acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>.
+				qui a &eacute;t&eacute; certifi&eacute; conforme &agrave; la norme internationale <abbr title="Organisation internationale de normailisation">ISO</abbr>&nbsp;14001
+        concerant les <abbr title="syst&egrave;me de gestion de l'environnement">SGE</abbr>.
       </p>
 
       <div class="topPage"> 
@@ -114,10 +114,10 @@
         </a> 
       </div>
 
-      <h2 id="iso"><acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001</h2>
+      <h2 id="iso"><abbr title="Organisation internationale de normailisation">ISO</abbr>&nbsp;14001</h2>
 
       <p>
-        La certification <acronym title="Organisation internationale de normailisation">IS0</acronym> 14001
+        La certification <abbr title="Organisation internationale de normailisation">IS0</abbr> 14001
         est un norme internationale concerant l'&eacute;laboration et la mise en &#339;uvre
         d'un syst&egrave;me de gestion de l'environnement.
         Admissible &agrave; cette certification en 2001, la cale s&egrave;che d'Esquimalt a
@@ -149,12 +149,12 @@
       <p>
         L'engagement de la cale s&egrave;che d'Esquimalt envers la protection de
 				l'environnement est &eacute;nonc&eacute; dans la <a href="politique-policy-fra.html">Politique
-          environnementale</a> de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>.
+          environnementale</a> de la <abbr title="cale s&egrave;che d'Esquimalt">CSE</abbr>.
       </p>
 
       <p>
         En adoptant la <a href="politique-policy-fra.html">Politique environnementale</a> de
-        la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>, la haute
+        la <abbr title="cale s&egrave;che d'Esquimalt">CSE</abbr>, la haute
         direction s'est engag&eacute;e &agrave; pr&eacute;venir la pollution, &agrave; prot&eacute;ger
         le milieu naturel et &agrave; respecter la r&eacute;glementation et les
         normes environnementales applicables.
@@ -174,18 +174,18 @@
         dans les installations de la cale s&egrave;che d'Esquimalt (CSE) le fasse dans
         le respect de l'environnement, y compris en conformit&eacute; avec
         la r&eacute;glementation et des normes environnementales applicables. &Agrave; cetter
-        fin, <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> a &eacute;labor&eacute; une s&eacute;rie
+        fin, <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr> a &eacute;labor&eacute; une s&eacute;rie
         d&eacute;taill&eacute;e de meilleures pratiques de gestion de l'environnement
         (MPGE).
       </p>
 
       <p>
-        Les <acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>
+        Les <abbr title="meilleures pratiques de gestion de l'environnement">MPGE</abbr>
         constituent un moyen de r&eacute;duire et de pr&eacute;venir le rejet de
         polluants dans l'environnement gr&acirc;ce &agrave; de bonnes pratiques
         d'entretien, de maintenance, de gestion du mat&eacute;riel, de communications
         et de travail et &agrave; la technologie. La plupart des 
-        <acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym> sont
+        <abbr title="meilleures pratiques de gestion de l'environnement">MPGE</abbr> sont
         une forme de contr&ocirc;le &agrave; la source &agrave; des fins de pr&eacute;vention
         de la pollution, et leur mise en &#339;uvre peut r&eacute;duire au minimum
         les d&eacute;chets et la pollution provenant d'activit&eacute;s comme l'enl&egrave;vement
@@ -195,7 +195,7 @@
 
       <p>
         Pour obtenir une copie des meilleures pratiques 
-        de gestion de l'environnement de la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym>,
+        de gestion de l'environnement de la <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr>,
         veuillez communiquer avec le <a href="#coordonnateur-coordinator">Coordonnateur environnemental</a>.
       </p>
 
@@ -212,7 +212,7 @@
         <li><a href="simple-fra.html">Une id&eacute;e toute simple&nbsp;: un rideau de bulles d'air permet de sauver des poissons et des phoques, et d'&eacute;pargner un temps pr&eacute;cieux</a> (2003)</li>
         <li><a href="ecocivisme-environment-fra.html">La cale s&egrave;che d'Esquimalt&nbsp;: un exemple d'&eacute;cocivisme</a> (2002) </li>
         <li><a href="barrage-boom-fra.html">La cale s&egrave;che d'Esquimalt fait barrage aux d&eacute;versements de p&eacute;trole</a> (2000) </li>
-        <li><a href="voie-way-fra.html"><acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>&nbsp;: chef de file en voie vers la certification <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001</a>&nbsp;(2000)</li>
+        <li><a href="voie-way-fra.html"><abbr title="cale s&egrave;che d'Esquimalt">CSE</abbr>&nbsp;: chef de file en voie vers la certification <abbr title="Organisation internationale de normailisation">ISO</abbr>&nbsp;14001</a>&nbsp;(2000)</li>
       </ul>
 
       <div class="topPage"> 
