--- a/env/projects-projets-fra.html
+++ b/env/projects-projets-fra.html
@@ -69,7 +69,7 @@
 		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt; <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>&nbsp;: tarifs</p>
+			&gt; <abbr title="cale s&egrave;che d'Esquimalt">CSE</abbr>&nbsp;: tarifs</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
@@ -86,7 +86,7 @@
 
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					<acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>&nbsp;: Projets d'immobilisations
+					<abbr title="cale s&egrave;che d'Esquimalt">CSE</abbr>&nbsp;: Projets d'immobilisations
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</h1>
 
@@ -95,7 +95,7 @@
         </p>
 
         <p>
-          En plus des projets susmentionn&eacute;s, la cale s&egrave;che d'Esquimalt est &agrave; la recherche de financement en vue d&iquest;une rallonge de 100&nbsp;pieds au quai de bassin vers l&iquest;est &agrave; partir du mur est de la section&nbsp;no&nbsp;3. La r&eacute;ponse &agrave; notre demande de financement en vue de ces travaux sera connue en f&eacute;vrier&nbsp;2010. La rallonge de 100&nbsp;pieds facilitera les p&eacute;riodes prolong&eacute;es d&iquest;amarrage dans le cadre du projet de prolongation de la dur&eacute;e de vie des fr&eacute;gates du <acronym title="Minist&egrave;re de la D&eacute;fense Nationale">MDN</acronym>, en plus de permettre l&iquest;amarrage d&iquest;un certain nombre de gros navires de la flotte de traversiers <acronym title="Colombie-Britannique">BC</acronym> Ferries dans une seule section. Il restera ainsi environ 750&nbsp;pieds de cale s&egrave;ches pour les autres travaux de remise &agrave; neuf et de r&eacute;paration. Nous comprenons que la fermeture compl&egrave;te de la section&nbsp;no&nbsp;3 posera des inconv&eacute;nients pour tous d&iquest;environ mai&nbsp;2010 jusqu&iquest;&agrave; la fin mars&nbsp;2011 mais nous croyons que tous s&iquest;accorderont sur le fait que ces inconv&eacute;nients &agrave; court terme (environ 10&nbsp;mois) seront &agrave; l&iquest;avantage de tous &agrave; long terme en ajoutant des espaces en cale s&egrave;che.
+          En plus des projets susmentionn&eacute;s, la cale s&egrave;che d'Esquimalt est &agrave; la recherche de financement en vue d&iquest;une rallonge de 100&nbsp;pieds au quai de bassin vers l&iquest;est &agrave; partir du mur est de la section&nbsp;no&nbsp;3. La r&eacute;ponse &agrave; notre demande de financement en vue de ces travaux sera connue en f&eacute;vrier&nbsp;2010. La rallonge de 100&nbsp;pieds facilitera les p&eacute;riodes prolong&eacute;es d&iquest;amarrage dans le cadre du projet de prolongation de la dur&eacute;e de vie des fr&eacute;gates du <abbr title="Minist&egrave;re de la D&eacute;fense Nationale">MDN</abbr>, en plus de permettre l&iquest;amarrage d&iquest;un certain nombre de gros navires de la flotte de traversiers <abbr title="Colombie-Britannique">BC</abbr> Ferries dans une seule section. Il restera ainsi environ 750&nbsp;pieds de cale s&egrave;ches pour les autres travaux de remise &agrave; neuf et de r&eacute;paration. Nous comprenons que la fermeture compl&egrave;te de la section&nbsp;no&nbsp;3 posera des inconv&eacute;nients pour tous d&iquest;environ mai&nbsp;2010 jusqu&iquest;&agrave; la fin mars&nbsp;2011 mais nous croyons que tous s&iquest;accorderont sur le fait que ces inconv&eacute;nients &agrave; court terme (environ 10&nbsp;mois) seront &agrave; l&iquest;avantage de tous &agrave; long terme en ajoutant des espaces en cale s&egrave;che.
         </p>
 
         <p>
