--- a/env/simple-eng.html
+++ b/env/simple-eng.html
@@ -98,11 +98,11 @@
 					escorted out of the dock before ship repairs begin. </div>
 				<p>The new bubble curtain at the Esquimalt Graving Dock is saving hundreds
 					of salmon and keeping shipyards running smoothly.</p>
-				<p>The <acronym title="Public Works and Government Services Canada">PWGSC</acronym>-owned dock in Victoria, <acronym title="British Columbia">BC</acronym>, is a world-class water vessel repair
+				<p>The <abbr title="Public Works and Government Services Canada">PWGSC</abbr>-owned dock in Victoria, <abbr title="British Columbia">BC</abbr>, is a world-class water vessel repair
 					facility. At over 350&nbsp;metres long (the length of three football
 					fields) and nearly 50&nbsp;metres wide, it is wider than the Panama
 					Canal and can accommodate 90&nbsp;per-cent of existing ocean vessels.
-					<acronym title="Public Works and Government Services Canada">PWGSC</acronym> leases space to private shipyards, which work on <acronym title="British Columbia">BC</acronym>
+					<abbr title="Public Works and Government Services Canada">PWGSC</abbr> leases space to private shipyards, which work on <abbr title="British Columbia">BC</abbr>
 					Ferries, cruise ships, and other vessels. About 70&nbsp;ships
 					come in and out every year.</p>
 				<h2>Unwanted Visitors </h2>
@@ -112,7 +112,7 @@
 					inside, stranded on the dock floor.</p>
 				<p>Seals had to be coaxed into a first aid basket, and lifted by a crane
 					over the dock walls to be released back into the ocean.</p>
-				<p>&quot;It was quite an ordeal getting them out,&quot; says Daryl Lawes, <acronym title="Public Works and Government Services Canada">PWGSC</acronym> Environmental
+				<p>&quot;It was quite an ordeal getting them out,&quot; says Daryl Lawes, <abbr title="Public Works and Government Services Canada">PWGSC</abbr> Environmental
 					Coordinator, Environmental Services Directorate in Victoria.</p>
 				<p>&quot;They would bite and snap at the brooms used, and up to six dock
 					employees would be needed to rescue them.&quot;</p>
@@ -130,7 +130,7 @@
 				<p>It came to a head about a year and a half ago when a ship docked at around
 					11:30&nbsp;p.m. When the water was pumped out, almost 150&nbsp;salmon
 					&mdash; at 20&nbsp;to 25&nbsp;kilos each &mdash; were splashing on the dock floor.</p>
-				<p><acronym title="Public Works and Government Services Canada">PWGSC</acronym> Dock Operator Bill Anderson recalls being told to put his hipwaders
+				<p><abbr title="Public Works and Government Services Canada">PWGSC</abbr> Dock Operator Bill Anderson recalls being told to put his hipwaders
 					on. &quot;There were fish everywhere,&quot; he says. &quot;I've never seen
 					so many. We were told to try to save the female coho salmon
 					and we were there until four in the morning with all the
