--- a/env/voie-way-eng.html
+++ b/env/voie-way-eng.html
@@ -73,7 +73,7 @@
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
 			&gt;&nbsp;<a href="interet-interest-eng.html">Articles
-			of Interest</a>			&gt; Leading the Way with <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001</p>
+			of Interest</a>			&gt; Leading the Way with <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
@@ -90,7 +90,7 @@
 
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					<acronym title="Esquimalt Graving Dock">EGD</acronym>: Leading the Way with <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001
+					<abbr title="Esquimalt Graving Dock">EGD</abbr>: Leading the Way with <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>by Dan del Villano</p>
@@ -99,12 +99,12 @@
 					Daryl Lawes and Rae-Ann Shaw also think about how <em>people</em> use the
 					technology.
 				<p>They are the Environmental Coordinators for the Esquimalt Graving Dock
-					in British Columbia and they're working on <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 certification
+					in British Columbia and they're working on <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001 certification
 					for Canada's largest dry dock. Says Lawes, &quot;It is an exciting
 					project because we are the only large ship repair facility
-					in the world who are working on <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001.&quot; The certification
+					in the world who are working on <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001.&quot; The certification
 					should be in place by April&nbsp;2001.</p>
-				<p><acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 is an internationally recognized standard for environmental
+				<p><abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001 is an internationally recognized standard for environmental
 					management. Companies and government organizations put the
 					system in place to minimize the environmental impact of their
 					operations. Certification is a big job; in a multi-million-dollar
@@ -114,31 +114,31 @@
 				<p>Lawes and Shaw eventually determined that 17&nbsp;areas were the most significant
 					and are now working on programs to address each one. Shaw
 					explains, &quot;It is a huge undertaking because we have to look
-					at contractor operations at the Dock, not just <acronym title="Public Works and Government Services Canada">PWGSC</acronym> operations.
+					at contractor operations at the Dock, not just <abbr title="Public Works and Government Services Canada">PWGSC</abbr> operations.
 					For example, air quality is a big issue because there is
 					a lot of sandblasting at the Dock, but we don't do the blasting.
 					The companies that work at the Dock do it.&quot; She emphasizes
-					that <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 is more than just a manual, it is a whole
+					that <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001 is more than just a manual, it is a whole
 					system.</p>
 				<p>Jim Milne manages the Graving Dock and gives the project full support.
-					&quot;You have to recognize how ambitious it is to implement <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;					14001 in such a complex, heavily industrialized facility,&quot;
+					&quot;You have to recognize how ambitious it is to implement <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;					14001 in such a complex, heavily industrialized facility,&quot;
 					he says. &quot;The reason we seem to be the only one trying it
 					is probably because it is such a huge job.&quot; Others are watching
 					with interest, though. Calls have come from numerous local
 					shipyards and from Halifax, Seattle and Virginia. Milne is
-					also thankful for the support of key clients, including <acronym title="Department of National Defense">DND</acronym>,
-					the Canadian Coast Guard and <acronym title="British Columbia">BC</acronym> Ferries.</p>
+					also thankful for the support of key clients, including <abbr title="Department of National Defense">DND</abbr>,
+					the Canadian Coast Guard and <abbr title="British Columbia">BC</abbr> Ferries.</p>
 				<p>Lawes agrees that certification is an enormous job, but he thinks it makes
 					good business sense. Environmental protection, of course,
 					is the main benefit. The Dock is surrounded by residential
-					areas and strives to be a good neighbour. Also <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001
-					will increase compliance assurance; that is, <acronym title="Public Works and Government Services Canada">PWGSC</acronym> will be
+					areas and strives to be a good neighbour. Also <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001
+					will increase compliance assurance; that is, <abbr title="Public Works and Government Services Canada">PWGSC</abbr> will be
 					better able to make sure that the Dock operations are in
 					line with legal requirements.</p>
 				<p>The environmental system also improves the Dock's competitiveness. Many
 					shipping lines, especially cruise ship lines, want to use
 					the most environmentally-friendly services. And, thanks to
-					<acronym title="Public Works and Government Services Canada">PWGSC</acronym>, the Esquimalt Graving Dock will be one of the best
+					<abbr title="Public Works and Government Services Canada">PWGSC</abbr>, the Esquimalt Graving Dock will be one of the best
 					options.</p>
 				<p><em>Source: Ensemble, July 2000, Volume&nbsp;8</em></p>
 			</div>
