--- a/his/article-eng.html
+++ b/his/article-eng.html
@@ -73,7 +73,7 @@
 		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-			&gt;&nbsp;<a href="../historique-history-eng.html">History</a> &gt; <acronym title="Queen Elizabeth">QE</acronym> Article<br />
+			&gt;&nbsp;<a href="../historique-history-eng.html">History</a> &gt; <abbr title="Queen Elizabeth">QE</abbr> Article<br />
 </p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
@@ -91,14 +91,14 @@
 
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					<acronym title="Queen Elizabeth">QE</acronym> Article
+					<abbr title="Queen Elizabeth">QE</abbr> Article
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</h1>
 				<p><em>Loose Lips Sink Ships</em></p>
 				<p>Longtime Esquimalt resident Ken Moffat was just five-years-old when the
 					massive passenger liner Queen Elizabeth crept into Esquimalt Harbour in
 					1942&nbsp;but he remembers the moment like it was yesterday. </p>
-				<p>The <acronym title="Queen Elizabeth">QE</acronym> was at the Esquimalt Graving Dock to be secretly refitted from
+				<p>The <abbr title="Queen Elizabeth">QE</abbr> was at the Esquimalt Graving Dock to be secretly refitted from
 					a passenger liner to a troopship capable of carrying a full army division
 					of 15,000&nbsp;men. This invaluable Allied asset was one of the most attractive
 					targets in the world and almost no one knew with certainty where she was.
@@ -113,9 +113,9 @@
 					of roads leading to the Dock,&quot; said Moffat. Somehow my mother got me
 					down there one night to see her. I remember pressing against a chain link
 					fence and looking up at a enourmous ship illuminated by moonlight. We stood
-					there for about five minutes before an <acronym title="Member of Parliament">MP</acronym> saw us and asked us to move along.&quot; </p>
+					there for about five minutes before an <abbr title="Member of Parliament">MP</abbr> saw us and asked us to move along.&quot; </p>
 				<p>The security measures worked. After a 13-day stay, with round-the-clock
-					shifts, the <acronym title="Queen Elizabeth">QE</acronym> sailed away an armed troop ship &ndash; and Victoria breathed a
+					shifts, the <abbr title="Queen Elizabeth">QE</abbr> sailed away an armed troop ship &ndash; and Victoria breathed a
 					sigh of relief.</p>
 				<div style="text-align: center;"><img src="../images/ssqe.jpg" alt="" width="349" height="418" /></div>
 			</div>
