--- a/his/article-fra.html
+++ b/his/article-fra.html
@@ -70,7 +70,7 @@
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
 			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt; Article
-			sur le <acronym title="Queen Elizabeth">QE</acronym></p>
+			sur le <abbr title="Queen Elizabeth">QE</abbr></p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
@@ -86,7 +86,7 @@
 			<div class="center">
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Article sur le <acronym title="Queen Elizabeth">QE</acronym>
+					Article sur le <abbr title="Queen Elizabeth">QE</abbr>
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</h1>
 				<p><em>Un secret bien gard&eacute;</em></p>
@@ -94,7 +94,7 @@
 					majestueux paquebot Queen Elizabeth fit son entr&eacute;e dans le port d'Esquimalt.
 					C'&eacute;tait en 1942&nbsp;et il se rappelle de cette journ&eacute;e comme si
 					c'&eacute;tait hier. </p>
-				<p>Le <acronym title="Queen Elizabeth">QE</acronym> avait &eacute;t&eacute; amen&eacute; &agrave; la cale s&egrave;che
+				<p>Le <abbr title="Queen Elizabeth">QE</abbr> avait &eacute;t&eacute; amen&eacute; &agrave; la cale s&egrave;che
 					d'Esquimalt dans le plus grand secret, afin d'&ecirc;tre transform&eacute; en
 					navire militaire pour le transport des troupes. Capable de transporter une
 					division compl&egrave;te de 15&nbsp;000&nbsp;hommes, ce b&acirc;timent indispensable
@@ -109,7 +109,7 @@
 					d'&eacute;viter de mentionner le nom du navire, en public comme en priv&eacute;.
 					&Agrave; cette &eacute;poque, la journ&eacute;e &eacute;tait ponctu&eacute;e
 					par le cri strident des sir&egrave;nes annon&ccedil;ant les raids a&eacute;riens,
-					et la presse ne disait mot de la pr&eacute;sence du <acronym title="Queen Elizabeth">QE</acronym> dans le port. </p>
+					et la presse ne disait mot de la pr&eacute;sence du <abbr title="Queen Elizabeth">QE</abbr> dans le port. </p>
 				<p>&laquo;&nbsp;La police d'Esquimalt &eacute;tait partout et bloquait la
 					plupart des voies menant &agrave; la cale s&egrave;che, explique-t-il. Mais
 					un soir, ma m&egrave;re m'emmena aux abords du chantier pour me montrer
@@ -118,7 +118,7 @@
 					un rayon de lune. Nous sommes rest&eacute;s l&agrave; environ cinq minutes
 					avant qu'un policier militaire ne vienne nous avertir de nous en aller.&nbsp;&raquo; </p>
 				<p>Les mesures de s&eacute;curit&eacute; furent efficaces&nbsp;: apr&egrave;s
-					treize jours de travaux 24&nbsp;heures sur&nbsp;24, le <acronym title="Queen Elizabeth">QE</acronym> repartit transform&eacute; en
+					treize jours de travaux 24&nbsp;heures sur&nbsp;24, le <abbr title="Queen Elizabeth">QE</abbr> repartit transform&eacute; en
 					navire de transport militaire &ndash; et tout Victoria poussa un soupir de soulagement. </p>
 				<div style="text-align: center;"><img src="../images/ssqe.jpg" alt="" width="349" height="418" /></div>
 			</div>
