--- a/historique-history-eng.html
+++ b/historique-history-eng.html
@@ -111,7 +111,7 @@
 				<h2>Articles</h2>
 				<p>by Leah Prentice</p>
 				<ul>
-					<li><a href="his/article-eng.html"><acronym title="Queen Elizabeth">QE</acronym> II Article</a>&nbsp;&nbsp;(June&nbsp;2002)</li>
+					<li><a href="his/article-eng.html"><abbr title="Queen Elizabeth">QE</abbr> II Article</a>&nbsp;&nbsp;(June&nbsp;2002)</li>
 				</ul>
 				<h2>Photographs</h2>
 				<p>Select a year:</p>
