--- a/historique-history-fra.html
+++ b/historique-history-fra.html
@@ -112,7 +112,7 @@
 				<h2>Articles</h2>
 				<p>(par Leah Prentice)</p>
 				<ul>
-					<li><a href="his/article-fra.html">Article <acronym title="Queen Elizabeth">QE</acronym> II</a>&nbsp;&nbsp;(Juin&nbsp;2002)</li>
+					<li><a href="his/article-fra.html">Article <abbr title="Queen Elizabeth">QE</abbr> II</a>&nbsp;&nbsp;(Juin&nbsp;2002)</li>
 				</ul>
 				<h2> Photos</h2>
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
