--- a/index-fra.html
+++ b/index-fra.html
@@ -65,12 +65,12 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					
 					<p>La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la c&ocirc;te Ouest des Am&eacute;riques. Nous sommes <a href="emp-loc-fra.html">situ&eacute;s</a> dans un port ouvert &agrave; l'ann&eacute;e longue, sur l'&icirc;le de Vancouver, &agrave; proximit&eacute; des voies d'acc&egrave;s
 &agrave; l'Alaska et aux pays riverains du Pacifique. </p>
-					<p>Nos installations de calibre mondial sont &eacute;quip&eacute;es notamment de logements pour stabilisateurs et d'appareils de levage haute vitesse pour charges lourdes (capacit&eacute; de 150-165&nbsp;tonnes). La cale s&egrave;che peut recevoir des navires de 100&nbsp;000&nbsp;<acronym title="Tonnes de port en lourd">TPL</acronym>, soit environ 90&nbsp;% des navires du monde.</p>
-					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm">offre des services de r&eacute;paration et d'entretien naval aux entreprises commerciales et aux particuliers</a>, sur commande (premier arriv&eacute;, premier servi). Tout le travail est assur&eacute; par des <a href="entreprises-firms-fra.html">entreprises de r&eacute;paration navale</a> du secteur priv&eacute;.</p>
+					<p>Nos installations de calibre mondial sont &eacute;quip&eacute;es notamment de logements pour stabilisateurs et d'appareils de levage haute vitesse pour charges lourdes (capacit&eacute; de 150-165&nbsp;tonnes). La cale s&egrave;che peut recevoir des navires de 100&nbsp;000&nbsp;<abbr title="Tonnes de port en lourd">TPL</abbr>, soit environ 90&nbsp;% des navires du monde.</p>
+					<p>La <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr> <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm">offre des services de r&eacute;paration et d'entretien naval aux entreprises commerciales et aux particuliers</a>, sur commande (premier arriv&eacute;, premier servi). Tout le travail est assur&eacute; par des <a href="entreprises-firms-fra.html">entreprises de r&eacute;paration navale</a> du secteur priv&eacute;.</p>
 				</div>
 				<div class="option2">
 					<h2>Qui sommes-nous?</h2>
-					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> est une division du minist&egrave;re f&eacute;d&eacute;ral des
+					<p>La <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr> est une division du minist&egrave;re f&eacute;d&eacute;ral des
 						Travaux publics et des Services gouvernementaux du Canada (TPSGC).</p>
 					<p>Les services de r&eacute;paration de navires sont assur&eacute;s 24&nbsp;heures
 						sur 24,&nbsp;7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e. Nous proposons toute
@@ -81,7 +81,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				</div>
 				<div class="option2">
 					<h2>Services offerts</h2>
-					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> est tr&egrave;s appr&eacute;ci&eacute;e des propri&eacute;taires
+					<p>La <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr> est tr&egrave;s appr&eacute;ci&eacute;e des propri&eacute;taires
 						de navires pour leurs travaux de r&eacute;paration et d'entretien&nbsp;:</p>
 					<ul>
 						<li>Paquebots de croisi&egrave;re;</li>
@@ -91,7 +91,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 							D&eacute;fense nationale et de la British Columbia Ferry Corporation. </li>
 					</ul>
 					<p>Gr&acirc;ce &agrave; notre <a href="env/programme-program-fra.html">syst&egrave;me
-							de gestion environnementale homologu&eacute; <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001</a>, nos travaux
+							de gestion environnementale homologu&eacute; <abbr title="Organisation internationale de normailisation">ISO</abbr>&nbsp;14001</a>, nos travaux
 							sont ex&eacute;cut&eacute;s
 							dans le respect de l'environnement. Nous sommes l'un
 							des trois chantiers de r&eacute;paration navale multi-usagers au monde &agrave; poss&eacute;der
