--- a/merci-thankyou-eng.html
+++ b/merci-thankyou-eng.html
@@ -73,7 +73,7 @@
 		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-			&gt;&nbsp;<a href="/pac/cse-egd/cn-cu-eng.html">Contact <acronym title="Esquimalt Graving Dock">EGD</acronym></a> &gt; Thank You</p>
+			&gt;&nbsp;<a href="/pac/cse-egd/cn-cu-eng.html">Contact <abbr title="Esquimalt Graving Dock">EGD</abbr></a> &gt; Thank You</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
