--- a/merci-thankyou-fra.html
+++ b/merci-thankyou-fra.html
@@ -69,7 +69,7 @@
 		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt;&nbsp;<a href="cn-cu-fra.html">Contactez <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a> &gt; Merci</p>
+			&gt;&nbsp;<a href="cn-cu-fra.html">Contactez <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr></a> &gt; Merci</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
