--- a/rendement-performance-eng.html
+++ b/rendement-performance-eng.html
@@ -103,11 +103,11 @@
 					<li>administration services, to reserve services or space for vessels</li>
 					<li>notification of uses within 48&nbsp;hours of changes to service/space that
 						may affect the safe and efficient operations of the facility;</li>
-					<li>an Emergency Response Plan for the <acronym title="Esquimalt Graving Dock">EGD</acronym>; and</li>
+					<li>an Emergency Response Plan for the <abbr title="Esquimalt Graving Dock">EGD</abbr>; and</li>
 					<li>an approved marine facility security plan and a qualified Marine Facility
 						Security Officer.</li>
 				</ul>
-				<p><acronym title="Public Works and Government Services Canada">PWGSC</acronym> will report on the measurement of the services provided on an annual
+				<p><abbr title="Public Works and Government Services Canada">PWGSC</abbr> will report on the measurement of the services provided on an annual
 					basis.</p>
 				<ul>
 					<li>Reservations and confirmed bookings were provided in a reasonable manner
@@ -115,12 +115,12 @@
 					<li>Notifications of changes to service and/or capacity of the facility
 						will be provided within 48&nbsp;hours after first noting the change in condition
 						of the service or capacity at least 90%&nbsp;of the time.</li>
-					<li>The <acronym title="Esquimalt Graving Dock">EGD</acronym> Emergency Response Plan will be reviewed and updated, if required,
+					<li>The <abbr title="Esquimalt Graving Dock">EGD</abbr> Emergency Response Plan will be reviewed and updated, if required,
 						every 2&nbsp;years.</li>
-					<li>The <acronym title="Esquimalt Graving Dock">EGD</acronym> will continue to have a valid Statement of Compliance of Marine
+					<li>The <abbr title="Esquimalt Graving Dock">EGD</abbr> will continue to have a valid Statement of Compliance of Marine
 						Facility or a Port certificate and that all regulated security audits have
 						been completed.</li>
-					<li>Disputes related to service and/or capacity of the <acronym title="Esquimalt Graving Dock">EGD</acronym> would be handled
+					<li>Disputes related to service and/or capacity of the <abbr title="Esquimalt Graving Dock">EGD</abbr> would be handled
 						in the following manner:</li>
 				</ul>
 				<dl>
@@ -136,7 +136,7 @@
 
 					<dt>Third level of referral:</dt>
 					<dd>Assistant Deputy Minister &ndash; Real Property<br />
-						Associate Deputy Minister &ndash; <acronym title="Public Works and Government Services Canada">PWGSC</acronym></dd>
+						Associate Deputy Minister &ndash; <abbr title="Public Works and Government Services Canada">PWGSC</abbr></dd>
 
 				</dl>
 				<p><strong>Note: this document will be updated annually.</strong></p>
