--- a/services-eng.html
+++ b/services-eng.html
@@ -112,7 +112,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
           Our clients are serviced by three heavy-lift electrically-driven, rail-mounted travelling cranes as well as a 7&nbsp;tonne Tower Crane on the South Jetty, and 3&nbsp;mobile cranes.
           </p>
 
-          <p>Cranes at <acronym title="Esquimalt Graving Dock">EGD</acronym>:</p>
+          <p>Cranes at <abbr title="Esquimalt Graving Dock">EGD</abbr>:</p>
 
           <img src="images/grue-crane.jpg" width="193" height="280" alt="" style="float: right; padding-left: 10px;" />
 
@@ -129,7 +129,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
           </p>
 
           <p>
-          <strong>Pecco 7&nbsp;tonne Tower Crane</strong> is situated on the South Jetty of <acronym title="Esquimalt Graving Dock">EGD</acronym> and can service vessels berthed at the South Jetty.
+          <strong>Pecco 7&nbsp;tonne Tower Crane</strong> is situated on the South Jetty of <abbr title="Esquimalt Graving Dock">EGD</abbr> and can service vessels berthed at the South Jetty.
           </p>
 
           <p>
@@ -143,7 +143,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
           <h2>Risk Management</h2>
 
           <p>
-          The Risk Management Group addresses issues concerning safety, fire, security and public relations. They also ensure that <acronym title="Esquimalt Graving Dock">EGD</acronym> maintains its Marine Facility Certification under the requirements of the Marine Transportation Security Regulations and International Ship &amp; Port Facility Security Code. This group works and coordinates mostly behind the scenes to help ensure that not only do <acronym title="Esquimalt Graving Dock">EGD</acronym> employees work in a safe and secure environment, but also employees of the companies that operate out of the <acronym title="Esquimalt Graving Dock">EGD</acronym> facility.  
+          The Risk Management Group addresses issues concerning safety, fire, security and public relations. They also ensure that <abbr title="Esquimalt Graving Dock">EGD</abbr> maintains its Marine Facility Certification under the requirements of the Marine Transportation Security Regulations and International Ship &amp; Port Facility Security Code. This group works and coordinates mostly behind the scenes to help ensure that not only do <abbr title="Esquimalt Graving Dock">EGD</abbr> employees work in a safe and secure environment, but also employees of the companies that operate out of the <abbr title="Esquimalt Graving Dock">EGD</abbr> facility.  
           </p>
 
 			</div>
