--- a/site-eng.html
+++ b/site-eng.html
@@ -110,15 +110,15 @@
 							<li><a href="his/1925-eng.html">History&nbsp;1925</a></li>
 							<li><a href="his/1926-eng.html">History&nbsp;1926</a></li>
 							<li><a href="his/1927-eng.html">History&nbsp;1927</a></li>
-							<li><a href="his/article-eng.html"><acronym title="Queen Elizabeth">QE</acronym> Article</a></li>
+							<li><a href="his/article-eng.html"><abbr title="Queen Elizabeth">QE</abbr> Article</a></li>
 						</ul>
 					</li>
-					<li><a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">Booking Space at the <acronym title="Esquimalt Graving Dock">EGD</acronym></a></li>
+					<li><a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">Booking Space at the <abbr title="Esquimalt Graving Dock">EGD</abbr></a></li>
 
 					<li><a href="rendement-performance-eng.html">Performance Standard</a></li>
 				</ul>
 				<ul>
-					<li><a href="cn-cu-eng.html">Contact <acronym title="Esquimalt Graving Dock">EGD</acronym></a></li>
+					<li><a href="cn-cu-eng.html">Contact <abbr title="Esquimalt Graving Dock">EGD</abbr></a></li>
 				</ul>
 			</div>
 
