--- a/site-fra.html
+++ b/site-fra.html
@@ -106,14 +106,14 @@
 							<li> <a href="his/1925-fra.html">Historique&nbsp;1925</a></li>
 							<li> <a href="his/1926-fra.html">Historique&nbsp;1926</a></li>
 							<li> <a href="his/1927-fra.html">Historique&nbsp;1927</a></li>
-							<li> <a href="his/article-fra.html">Article sur le <acronym title="Queen Elizabeth">QE</acronym></a></li>
+							<li> <a href="his/article-fra.html">Article sur le <abbr title="Queen Elizabeth">QE</abbr></a></li>
 						</ul>
 					</li>
-					<li><a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm">R&eacute;servation pour travaux le <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></li>
+					<li><a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm">R&eacute;servation pour travaux le <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr></a></li>
 					<li><a href="rendement-performance-fra.html">Norme de rendement</a></li>
 				</ul>
 				<ul>
-					<li><a href="cn-cu-fra.html">Contactez <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a></li>
+					<li><a href="cn-cu-fra.html">Contactez <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr></a></li>
 				</ul>
 			</div>
 
