--- a/dimensions2-fra.html
+++ b/dimensions2-fra.html
@@ -92,7 +92,7 @@
 		  <div class="smallFont" style="font-weight:bold; width:730px; margin-bottom:40px;">
 				<p>L'image ci-dessus donne une vue en plan et une vue longitudinale de la cale s&egrave;che.</p>
 			  <p>La cale s&egrave;che d'Esquimalt mesure 357,5&nbsp;m sur 38,4&nbsp;m, soit environ 1&nbsp;200&nbsp;pi de longueur sur 135&nbsp;pi de largeur. L'installation est dot&eacute;e de deux vannes &agrave; caisson flottant, qui peuvent &ecirc;tre dispos&eacute;es &agrave; quatre endroits diff&eacute;rents pour diviser la cale en deux sections. Le dessus de la dalle de plancher de la cale s&egrave;che est &agrave; -10,52&nbsp;m et le couronnement de granit (dessus des murs de sout&egrave;nement de la cale s&egrave;che) se trouve &agrave; 4,42&nbsp;m.</p>
-			  <p>S'il vous pla&icirc;t <a href="cn-cu-fra.html">contactez <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a> pour plus de d&eacute;tails sur les dimensions du bassin.</p>
+			  <p>S'il vous pla&icirc;t <a href="cn-cu-fra.html">contactez <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr></a> pour plus de d&eacute;tails sur les dimensions du bassin.</p>
 		  </div>
 				
 			<p><a href="dimensions-fra.html">Retour &agrave; &laquo;&nbsp;Renseignments g&eacute;n&eacute;raux&nbsp;&raquo;</a></p>
