--- a/env/barrage-boom-eng.html
+++ b/env/barrage-boom-eng.html
@@ -96,9 +96,9 @@
 				<p>by Dan del Villano </p>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:300px;">
 					<img src="../images/lowering-the-boom-1.jpg" alt="" width="300" height="199" /><br />
-					<acronym title="Public Works and Government Services Canada">PWGSC</acronym> employees and contractors learn the serious business of marine spill cleanup at the esquimalt Graving Dock. The orange inflatable boom is used to control oil spills. </div>
+					<abbr title="Public Works and Government Services Canada">PWGSC</abbr> employees and contractors learn the serious business of marine spill cleanup at the esquimalt Graving Dock. The orange inflatable boom is used to control oil spills. </div>
 				<p>In early spring, the Esquimalt Graving Dock, Canada's biggest dry dock,
-					was teh site of oil spill training for <acronym title="Public Works and Government Services Canada">PWGSC</acronym> employees and contractors who
+					was teh site of oil spill training for <abbr title="Public Works and Government Services Canada">PWGSC</abbr> employees and contractors who
 					work at the facility.</p>
 				<p>The course covered: the characteristics and safe handling of petroleum
 					products, personal protective equipment, containment, clean up, storage,
@@ -114,13 +114,13 @@
 					Erring
 					on the side of caution, the Esquimalt Graving Dock always has a boom deployed. </div>
 				<p>Perhaps more importantly, the marine spill response training is another
-					step in getting <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 certification. <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 is an internationally
+					step in getting <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001 certification. <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001 is an internationally
 					recognized environmental management standard and the Esquimalt Graving Dock
 					is the only large shipbuilding/repair facility in the world that will soon
 					be certified.</p>
-				<p>Bill Pleming is <acronym title="Public Works and Government Services Canada">PWGSC</acronym>'s Regional Safety Officer and he travelled from
+				<p>Bill Pleming is <abbr title="Public Works and Government Services Canada">PWGSC</abbr>'s Regional Safety Officer and he travelled from
 					Vancouver to take part in the training. He says that what really impressed
-					him was the cooperation between <acronym title="Public Works and Government Services Canada">PWGSC</acronym>, the Departmetn of National Defence,
+					him was the cooperation between <abbr title="Public Works and Government Services Canada">PWGSC</abbr>, the Departmetn of National Defence,
 					and the private sector: &quot;It was really proactive all the way around.&quot; </p>
 				<p><em>Source: Ensemble, August&nbsp;2000, Volume&nbsp;8, No.&nbsp;6</em></p>
 			</div>
