--- a/index-eng.html
+++ b/index-eng.html
@@ -64,13 +64,13 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
       
 		<div class="main1"><img src="images/dock-cale.jpg" alt="" width="388" height="250" style="width: 388px; height: 250px;" />
 					
-			<p>The Esquimalt Graving Dock, or EGD, is proud to be federally owned, operated, and maintained. <acronym title="Esquimalt Graving Dock">EGD</acronym> is the largest solid-bottom commercial drydock on the West Coast of the Americas. We are <a href="emp-loc-eng.html">located</a> in an ice free harbour on Vancouver Island near gateways to Alaska and the Pacific Rim. </p>
-			<p>Our world class facilities include stabilizer pockets and high-speed heavy lift cranes up to 150&nbsp;tonnes/165&nbsp;tons. The Dock can accommodate vessels up to 100,000&nbsp;<acronym title="Deadweight Tonnage">DWT</acronym> or about 90%&nbsp;of the world's ships.</p>
-			<p>The <acronym title="Esquimalt Graving Dock">EGD</acronym> is <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">available to any company or individual</a> on a first-come first-serve basis. All work is carried out by private sector <a href="entreprises-firms-eng.html">ship repair firms</a>. </p>
+			<p>The Esquimalt Graving Dock, or EGD, is proud to be federally owned, operated, and maintained. <abbr title="Esquimalt Graving Dock">EGD</abbr> is the largest solid-bottom commercial drydock on the West Coast of the Americas. We are <a href="emp-loc-eng.html">located</a> in an ice free harbour on Vancouver Island near gateways to Alaska and the Pacific Rim. </p>
+			<p>Our world class facilities include stabilizer pockets and high-speed heavy lift cranes up to 150&nbsp;tonnes/165&nbsp;tons. The Dock can accommodate vessels up to 100,000&nbsp;<abbr title="Deadweight Tonnage">DWT</abbr> or about 90%&nbsp;of the world's ships.</p>
+			<p>The <abbr title="Esquimalt Graving Dock">EGD</abbr> is <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">available to any company or individual</a> on a first-come first-serve basis. All work is carried out by private sector <a href="entreprises-firms-eng.html">ship repair firms</a>. </p>
 		</div>
 		<div class="option2">
 			<h2>Who We Are</h2>
-			<p>The <acronym title="Esquimalt Graving Dock">EGD</acronym> is a branch of Public Works and Government Services Canada (PWGSC) &ndash; a Canadian federal government department.</p>
+			<p>The <abbr title="Esquimalt Graving Dock">EGD</abbr> is a branch of Public Works and Government Services Canada (PWGSC) &ndash; a Canadian federal government department.</p>
 			<p>Ship repair work takes place 24-hours-a-day, seven days a week, 365&nbsp;days
 				a year. The Dock provides a full range of ship
 				repair services and amenities like our new stabilizer
@@ -78,7 +78,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 		</div>
 		<div class="option2">
 			<h2>What We Do</h2>
-			<p>The <acronym title="Esquimalt Graving Dock">EGD</acronym> is a popular
+			<p>The <abbr title="Esquimalt Graving Dock">EGD</abbr> is a popular
 				location for repair and refit work for:</p>
 			<ul>
 				<li>West Coast cruise ships;</li>
@@ -87,7 +87,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				<li>Canadian vessels &ndash; especially the Department of National Defense and
 					the British Columbia Ferry Corporation.</li>
 			</ul>
-			<p>Our <a href="env/programme-program-eng.html"><acronym title="International Standards Organization">ISO</acronym>&nbsp;14001 environmental management system</a> ensures that work done at the Esquimalt Graving Dock is done in an environmentally responsible manner.<br />
+			<p>Our <a href="env/programme-program-eng.html"><abbr title="International Standards Organization">ISO</abbr>&nbsp;14001 environmental management system</a> ensures that work done at the Esquimalt Graving Dock is done in an environmentally responsible manner.<br />
           </p>
         </div>
       </div></div>
