--- a/rendement-performance-fra.html
+++ b/rendement-performance-fra.html
@@ -100,13 +100,13 @@
 					<li>des pr&eacute;avis de 48&nbsp;heures sur les changements de service ou d'utilisation
 						de l'espace qui pourraient influer sur le bon fonctionnement et la s&egrave;curit&eacute; de
 						l'installation; </li>
-					<li>un plan d'intervention d'urgence pour la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym>;
+					<li>un plan d'intervention d'urgence pour la <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr>;
 						et</li>
 					<li>un plan approuv&eacute; de s&eacute;curit&eacute; des installations
 						maritimes ainsi que les services d'un Agent de s&ucirc;ret&eacute; de l'installation
 						maritime qualifi&eacute;</li>
 				</ul>
-				<p><acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym> fera rapport tous les ans sur la mesure des services.</p>
+				<p><abbr title="Travaux publics et Services gouvernementaux Canada">TPSGC</abbr> fera rapport tous les ans sur la mesure des services.</p>
 				<ul>
 					<li>Les r&eacute;servations et les confirmations de r&eacute;servations
 						doivent &ecirc;tre effectu&eacute;es de fa&ccedil;on raisonnable sur demande.</li>
@@ -114,18 +114,18 @@
 						l'installation seront, au moins neuf fois du&nbsp;10, &eacute;mis dans un d&eacute;lai
 						de 48&nbsp;heures apr&egrave;s la premi&egrave;re observation d'un changement
 						de condition dans la nature du service ou de la capacit&eacute;.</li>
-					<li>Le plan d'intervention d'urgence de la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> sera examin&eacute;, et mis &agrave; jour
+					<li>Le plan d'intervention d'urgence de la <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr> sera examin&eacute;, et mis &agrave; jour
 						si n&eacute;cessaire, tous les deux ans.</li>
-					<li>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> aura toujours un &eacute;nonc&eacute; de conformit&eacute; d'installation
+					<li>La <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr> aura toujours un &eacute;nonc&eacute; de conformit&eacute; d'installation
 						maritime valide ou un certificat d'installation portuaire valide et toutes
 						les v&eacute;rifications de s&eacute;curit&eacute; prescrites seront effectu&eacute;es.</li>
 					<li>Les diff&eacute;rends concernant les services et/ou les capacit&eacute;s
-						de la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> seront g&eacute;r&eacute;s de la fa&ccedil;on suivante&nbsp;:</li>
+						de la <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr> seront g&eacute;r&eacute;s de la fa&ccedil;on suivante&nbsp;:</li>
 				</ul>
 				<dl>
 
 					<dt>Premier recours&nbsp;:</dt>
-					<dd>Le directeur, <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></dd>
+					<dd>Le directeur, <abbr title="Cale s&egrave;che d'Esquimalt">CSE</abbr></dd>
 
 
 					<dt>Deuxi&egrave;me recours&nbsp;:</dt>
@@ -135,7 +135,7 @@
 
 					<dt>Troisi&egrave;me recours&nbsp;:</dt>
 					<dd>Sous ministre adjoint &ndash; Immobilier<br />
-						Sous ministre adjoint &ndash; <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym></dd>
+						Sous ministre adjoint &ndash; <abbr title="Travaux publics et Services gouvernementaux Canada">TPSGC</abbr></dd>
 
 				</dl>
 				<p><strong>Avis&nbsp;: Cet document sera mis &agrave; jour annuellement.</strong></p>
